--- a/careers.html
+++ b/careers.html
@@ -104,22 +104,31 @@
                     <div class="service-single-item">
                         <div class="w-richtext">
                             <p>
-                                We are always looking for passionate and talented individuals to join our growing team.
-                                At NXL Technologies, we value creativity, teamwork, and innovation. If you’re ready to
-                                take on exciting challenges and work in a dynamic environment, we’d love to hear from
-                                you!
+                                Join NXL Technologies Pvt. Ltd., a leading Software and IT Solutions company
+                                specializing in
+                                Digital Marketing, Website Development, and Creative Designing. Build your career in
+                                SEO,
+                                social media, PPC, content marketing, web solutions, and innovative design. We’re
+                                looking for
+                                creative and passionate individuals ready to grow in the fast-paced world of technology
+                                and
+                                digital solutions. At NXL Technologies, you’ll work on real projects, learn from
+                                industry experts,
+                                and gain opportunities for career advancement. Start your journey today with one of the
+                                best IT
+                                and Digital Marketing companies
                             </p>
-                            <p>‍</p>
+                            <!-- <p>‍</p>
                             <p>
                                 We offer a collaborative and supportive workplace where your contributions are valued.
                                 Whether you're a seasoned professional or just starting your career, there are plenty of
                                 opportunities for growth and advancement.
                             </p>
-                            <p>‍</p>
+                            <p>‍</p> -->
                         </div>
                     </div>
                     <div class="service-single-item">
-                        <p class="service-single-title">&#8212;How to Apply</p>
+                        <p class="service-single-title">&#8212; How to Apply</p>
                         <h4 class="heading-3">We’d Love to Hear From You</h4>
                     </div>
                     <div class="service-single-item">
@@ -130,8 +139,8 @@
                             </p>
                             <p>‍</p>
                             <p>
-                                <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc6f"
-                                    href="mailto:hr@nxltechnologies.com" class="call-link w-inline-block">
+                                <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc6f" href="mailto:hr@nxltechnologies.com"
+                                    class="call-link w-inline-block">
                                     <p class="number">hr@nxltechnologies.com</p>
                                 </a>
                             </p>
@@ -341,23 +350,21 @@
                         </div>
                         <div class="footer-item-left">
                             <div class="footer-form w-form">
-                                <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form"
-                                    data-wf-page-id="68aab41e45a40c4baf2e4c82"
-                                    data-wf-element-id="f48f2c1b-b707-bf58-230b-80a78bccbc75"><input
-                                        class="form-input w-input" maxlength="256" name="Name" data-name="Name"
-                                        placeholder="Full name *" data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc76"
-                                        type="text" id="Name" required="" /><input class="form-input w-input"
-                                        maxlength="256" name="Email" data-name="Email" placeholder="Email *"
-                                        data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc77" type="email" id="Email"
-                                        required="" /><input class="form-input w-input" maxlength="256"
-                                        name="Phone-number" data-name="Phone number" placeholder="Phone number *"
-                                        data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc78" type="number" id="Phone-number"
-                                        required="" /><textarea class="form-input _03 w-input" maxlength="5000"
-                                        name="Your-comment" data-name="Your comment" placeholder="Your comment *"
-                                        data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc79"
-                                        id="Your-comment"></textarea><input type="submit" data-wait="Please wait..."
-                                        data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc7a" class="message w-button"
-                                        value="Send Message" /></form><!-- Popup Box -->
+                                <form id="email-form" class="form" method="POST">
+                                    <input class="form-input w-input" name="name" placeholder="Full name *" type="text"
+                                        required />
+
+                                    <input class="form-input w-input" name="email" placeholder="Email *" type="email"
+                                        required />
+
+                                    <input class="form-input w-input" name="phone" placeholder="Phone number *"
+                                        type="text" required />
+
+                                    <textarea class="form-input w-input" name="message" placeholder="Your comment *"
+                                        required></textarea>
+
+                                    <input type="submit" class="message w-button" value="Send Message" />
+                                </form><!-- Popup Box -->
                                 <div id="thankPopup" class="popup-overlay">
                                     <div class="popup-box">
                                         <h3>Thank you!</h3>
@@ -386,42 +393,30 @@
                                     938 key avenues, San Francisco, CA 94124,
                                 </p>
                                 <div data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc86" class="social-icon-wrap">
-                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87"
-                                        href="https://www.facebook.com/login.php/" target="_blank"
+                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87" href="#" target="_blank"
                                         class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4b9_2a899f31757da7cc4fbe311f4daaf8b2_facbook.svg"
-                                            alt="facbook" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bd_4b106d8d5d153cf65f089c608f841317_facebook-white.svg"
-                                            alt="facebook-white" class="socile-icon-facebook" />
+                                        <img loading="lazy" src="./asset/image/facebook.png" alt="facbook"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="./asset/image/facebook.png" alt="facebook-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://x.com/i/flow/login" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4ba_d7ba9acc0667c1dc6fe56ffdd4d5b513_twitter.svg"
-                                            alt="twitter" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4be_5402a2eecabb4d77b832849dcbf68824_twtiter-white.svg"
-                                            alt="twtiter-white" class="socile-icon-facebook" />
+                                    <a href="https://x.com/NXL_Technology" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="./asset/image/twitter.png" alt="twitter"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="./asset/image/twitter.png" alt="twtiter-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://www.linkedin.com/" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bb_ad7f6780aafd2ad4430e660617d9a5cd_linkedin.svg"
-                                            alt="linkedin" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bf_a4767aba733af430dfca5d86622850ea_lindin-white.svg"
-                                            alt="lindin-white" class="socile-icon-facebook" />
+                                    <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Aorganization%3A104868089&keywords=nxl%20technologies&origin=RICH_QUERY_TYPEAHEAD_HISTORY&position=0&searchId=6b38339e-f040-4cd3-8b0a-95daae8558b2&sid=KN5&spellCorrectionEnabled=true" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="./asset/image/linkedin.png" alt="linkedin"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="./asset/image/linkedin.png" alt="lindin-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://www.pinterest.com/login/" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bc_a2049262845f7afd9de325d9aab69435_pinterest.svg"
-                                            alt="pinterest" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4c0_e046fa281a3e48d4f923fd8482eda766_pinteres-white.svg"
-                                            alt="pinteres-white" class="socile-icon-facebook" />
+                                    <a href="#" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="./asset/image/instagram.png" alt="pinterest"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="./asset/image/instagram.png" alt="pinteres-white"
+                                            class="socile-icon-facebook" />
                                     </a>
                                 </div>
                             </div>
@@ -449,7 +444,8 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6878854b4782d46450f79836"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
- <script src="./asset/js/custome.js"></script>   <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.36b8fb49256177c8.js"
+    <script src="./asset/js/custome.js"></script>
+    <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.36b8fb49256177c8.js"
         type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.ce27dc0b0564e9f1.js"
         type="text/javascript"></script>
