--- a/service/web-service.html
+++ b/service/web-service.html
@@ -386,42 +386,30 @@
                                     938 key avenues, San Francisco, CA 94124,
                                 </p>
                                 <div data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc86" class="social-icon-wrap">
-                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87"
-                                        href="https://www.facebook.com/login.php/" target="_blank"
+                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87" href="#" target="_blank"
                                         class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4b9_2a899f31757da7cc4fbe311f4daaf8b2_facbook.svg"
-                                            alt="facbook" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bd_4b106d8d5d153cf65f089c608f841317_facebook-white.svg"
-                                            alt="facebook-white" class="socile-icon-facebook" />
+                                        <img loading="lazy" src="../asset/image/facebook.png" alt="facbook"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="../asset/image/facebook.png" alt="facebook-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://x.com/i/flow/login" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4ba_d7ba9acc0667c1dc6fe56ffdd4d5b513_twitter.svg"
-                                            alt="twitter" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4be_5402a2eecabb4d77b832849dcbf68824_twtiter-white.svg"
-                                            alt="twtiter-white" class="socile-icon-facebook" />
+                                    <a href="https://x.com/NXL_Technology" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="../asset/image/twitter.png" alt="twitter"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="../asset/image/twitter.png" alt="twtiter-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://www.linkedin.com/" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bb_ad7f6780aafd2ad4430e660617d9a5cd_linkedin.svg"
-                                            alt="linkedin" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bf_a4767aba733af430dfca5d86622850ea_lindin-white.svg"
-                                            alt="lindin-white" class="socile-icon-facebook" />
+                                    <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Aorganization%3A104868089&keywords=nxl%20technologies&origin=RICH_QUERY_TYPEAHEAD_HISTORY&position=0&searchId=6b38339e-f040-4cd3-8b0a-95daae8558b2&sid=KN5&spellCorrectionEnabled=true" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="../asset/image/linkedin.png" alt="linkedin"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="../asset/image/linkedin.png" alt="lindin-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://www.pinterest.com/login/" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bc_a2049262845f7afd9de325d9aab69435_pinterest.svg"
-                                            alt="pinterest" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4c0_e046fa281a3e48d4f923fd8482eda766_pinteres-white.svg"
-                                            alt="pinteres-white" class="socile-icon-facebook" />
+                                    <a href="#" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="../asset/image/instagram.png" alt="pinterest"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="../asset/image/instagram.png" alt="pinteres-white"
+                                            class="socile-icon-facebook" />
                                     </a>
                                 </div>
                             </div>
