--- a/service/Cloud-Solutions.html
+++ b/service/Cloud-Solutions.html
@@ -167,23 +167,21 @@
                         </div>
                         <div class="footer-item-left">
                             <div class="footer-form w-form">
-                                <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form"
-                                    data-wf-page-id="68aab41e45a40c4baf2e4c82"
-                                    data-wf-element-id="f48f2c1b-b707-bf58-230b-80a78bccbc75"><input
-                                        class="form-input w-input" maxlength="256" name="Name" data-name="Name"
-                                        placeholder="Full name *" data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc76"
-                                        type="text" id="Name" required="" /><input class="form-input w-input"
-                                        maxlength="256" name="Email" data-name="Email" placeholder="Email *"
-                                        data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc77" type="email" id="Email"
-                                        required="" /><input class="form-input w-input" maxlength="256"
-                                        name="Phone-number" data-name="Phone number" placeholder="Phone number *"
-                                        data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc78" type="number" id="Phone-number"
-                                        required="" /><textarea class="form-input _03 w-input" maxlength="5000"
-                                        name="Your-comment" data-name="Your comment" placeholder="Your comment *"
-                                        data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc79"
-                                        id="Your-comment"></textarea><input type="submit" data-wait="Please wait..."
-                                        data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc7a" class="message w-button"
-                                        value="Send Message" /></form><!-- Popup Box -->
+                                <form id="email-form" class="form" method="POST">
+                                    <input class="form-input w-input" name="name" placeholder="Full name *" type="text"
+                                        required />
+
+                                    <input class="form-input w-input" name="email" placeholder="Email *" type="email"
+                                        required />
+
+                                    <input class="form-input w-input" name="phone" placeholder="Phone number *"
+                                        type="text" required />
+
+                                    <textarea class="form-input w-input" name="message" placeholder="Your comment *"
+                                        required></textarea>
+
+                                    <input type="submit" class="message w-button" value="Send Message" />
+                                </form><!-- Popup Box -->
                                 <div id="thankPopup" class="popup-overlay">
                                     <div class="popup-box">
                                         <h3>Thank you!</h3>
@@ -212,42 +210,30 @@
                                     938 key avenues, San Francisco, CA 94124,
                                 </p>
                                 <div data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc86" class="social-icon-wrap">
-                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87"
-                                        href="https://www.facebook.com/login.php/" target="_blank"
+                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87" href="#" target="_blank"
                                         class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4b9_2a899f31757da7cc4fbe311f4daaf8b2_facbook.svg"
-                                            alt="facbook" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bd_4b106d8d5d153cf65f089c608f841317_facebook-white.svg"
-                                            alt="facebook-white" class="socile-icon-facebook" />
+                                        <img loading="lazy" src="../asset/image/facebook.png" alt="facbook"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="../asset/image/facebook.png" alt="facebook-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://x.com/i/flow/login" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4ba_d7ba9acc0667c1dc6fe56ffdd4d5b513_twitter.svg"
-                                            alt="twitter" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4be_5402a2eecabb4d77b832849dcbf68824_twtiter-white.svg"
-                                            alt="twtiter-white" class="socile-icon-facebook" />
+                                    <a href="https://x.com/NXL_Technology" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="../asset/image/twitter.png" alt="twitter"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="../asset/image/twitter.png" alt="twtiter-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://www.linkedin.com/" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bb_ad7f6780aafd2ad4430e660617d9a5cd_linkedin.svg"
-                                            alt="linkedin" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bf_a4767aba733af430dfca5d86622850ea_lindin-white.svg"
-                                            alt="lindin-white" class="socile-icon-facebook" />
+                                    <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Aorganization%3A104868089&keywords=nxl%20technologies&origin=RICH_QUERY_TYPEAHEAD_HISTORY&position=0&searchId=6b38339e-f040-4cd3-8b0a-95daae8558b2&sid=KN5&spellCorrectionEnabled=true" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="../asset/image/linkedin.png" alt="linkedin"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="../asset/image/linkedin.png" alt="lindin-white"
+                                            class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://www.pinterest.com/login/" target="_blank"
-                                        class="footer-social-icon-link-wrap w-inline-block">
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4bc_a2049262845f7afd9de325d9aab69435_pinterest.svg"
-                                            alt="pinterest" class="socile-icon" />
-                                        <img loading="lazy"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688cfc6facbbf3e18dcdd4c0_e046fa281a3e48d4f923fd8482eda766_pinteres-white.svg"
-                                            alt="pinteres-white" class="socile-icon-facebook" />
+                                    <a href="#" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                        <img loading="lazy" src="../asset/image/instagram.png" alt="pinterest"
+                                            class="socile-icon" />
+                                        <img loading="lazy" src="../asset/image/instagram.png" alt="pinteres-white"
+                                            class="socile-icon-facebook" />
                                     </a>
                                 </div>
                             </div>
