--- a/service/Digital-Marketing.html
+++ b/service/Digital-Marketing.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>NXL &#8211; ERP-Solutions</title>
+    <title>NXL &#8211; Digital-Marketing</title>
     <meta content="Contact" property="og:title" />
     <meta content="Contact" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -71,7 +71,8 @@
                         class="global-menu__item">About Us</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="../index.html#Services"
                         class="global-menu__item">Service</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="../careers.html" class="global-menu__item">Careers</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="../careers.html"
+                        class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="../contact.html"
                         class="global-menu__item">Contact Us</a>
                 </div>
@@ -91,37 +92,58 @@
             <div class="w-layout-blockcontainer service-single-container w-container">
                 <div class="service-single-row">
                     <div class="service-single-item">
-                        <h4 class="heading-3">ERP Solutions</h4>
+                        <h4 class="heading-3">Digital marketing</h4>
                     </div>
-                    <div class="service-single-img-wrap"><img src="../asset/image/ERP-solution.jpg" loading="lazy"
-                            alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
-                            srcset="../asset/image/ERP-solution.jpg 500w, ../asset/image/ERP-solution.jpg  800w, ../asset/image/ERP-solution.jpg   1712w"
-                            class="service-single-img" />
-                    </div>
+                    <div class="service-single-img-wrap"><img
+                            src="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0a79e852bb7181566e49_groth.avif"
+                            loading="lazy" alt=""
+                            sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
+                            srcset="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0a79e852bb7181566e49_groth.avif 500w, https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0a79e852bb7181566e49_groth.avif  800w, https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0a79e852bb7181566e49_groth.avif  1712w"
+                            class="service-single-img" /></div>
                     <div class="service-single-item">
                         <div class="w-richtext">
-                            <h4 class="heading-3">Transform Your Business with Tailored ERP Solutions</h4>
+                            <h4 class="heading-3">Driving Growth with Powerful Digital Marketing Solutions</h4>
                             <br>
                             <p>
-                                NXL Technologies offers custom ERP (Enterprise Resource Planning) solutions designed to streamline and optimize your business operations. Our ERP systems integrate key business functions such as finance, inventory management, HR, sales, and procurement into one unified platform, helping you make data-driven decisions and improve efficiency.
+                                At NXL Technologies Pvt. Ltd., we help businesses grow with result-driven digital
+                                marketing services that connect brands with the right audience. As a trusted digital
+                                marketing company, we focus on strategies that boost visibility, generate quality leads,
+                                and
+                                increase conversions. From SEO and social media marketing to performance campaigns
+                                and content strategies, our team ensures your brand stays ahead in the competitive
+                                online
+                                space
                             </p>
                             <p>‍</p>
                             <p>
-                               We specialize in creating tailored ERP solutions that align with your company’s unique requirements, ensuring smooth workflows, real-time data access, and automated processes. Our expert team provides full support, from implementation to training and ongoing maintenance, ensuring a seamless transition and maximizing your ROI.
+                                Choosing the right marketing company can make all the difference, and that’s where we
+                                stand out. NXL Technologies combines creativity with data-driven insights to deliver
+                                measurable results. Our customized solutions are designed for businesses of all sizes,
+                                making us the go-to partner for brands looking to build strong digital identities
                             </p>
                             <p>‍</p>
                             <p>
-                                By automating routine tasks and centralizing operations, NXL’s ERP solutions enhance collaboration, reduce costs, and improve overall productivity. Let us help you scale your business with a powerful, easy-to-use ERP system that grows with you and keeps you ahead in today’s competitive landscape.
+                                If you’re searching for the best digital marketing company to grow your business, NXL
+                                Technologies offers the expertise, tools, and strategies to help you achieve long-term
+                                success online.
                             </p>
                             <p>‍</p>
                             <h6><strong>Service Lists</strong></h6>
                             <p>‍</p>
-                            <p>- Custom ERP Development</p>
-                            <p>- Cloud ERP Solutions</p>
-                            <p>- Cloud ERP Solutions</p>
-                            <p>- ERP Training & Support</p>
-                            <p>- ERP Implementation & Integration</p>
-                            <p>- ERP Data Migration</p>
+                            <p>- Search Engine Optimization (SEO)</p>
+                            <p>- Social Media Marketing (SMM)</p>
+                            <p>- Pay-Per-Click Advertising (PPC)</p>
+                            <p>- Content Marketing</p>
+                            <p>- Analytics & Reporting</p>
+                            <p>- Influencer and GCC Contents</p>
+                            <p>- Logo Designing</p>
+                            <p>‍</p>
+                            <h6><strong>Our Works</strong></h6>
+                            <p>‍</p>
+                            <p>- SEO & Website Optimization</p>
+                            <p>- Social Media Campaigns</p>
+                            <p>- Pay-Per-Click (PPC) Advertising</p>
+                            <p>- Content & Influencer Marketing</p>
                         </div>
                     </div>
                     <br><br>
@@ -157,6 +179,7 @@
                         <div class="footer-item-left">
                             <div class="footer-form w-form">
                                 <form id="email-form" class="form" method="POST">
+
                                     <input class="form-input w-input" name="name" placeholder="Full name *" type="text"
                                         required />
 
@@ -170,7 +193,9 @@
                                         required></textarea>
 
                                     <input type="submit" class="message w-button" value="Send Message" />
-                                </form><!-- Popup Box -->
+                                </form>
+
+                                <!-- Popup Box -->
                                 <div id="thankPopup" class="popup-overlay">
                                     <div class="popup-box">
                                         <h3>Thank you!</h3>
@@ -206,13 +231,15 @@
                                         <img loading="lazy" src="../asset/image/facebook.png" alt="facebook-white"
                                             class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://x.com/NXL_Technology" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                    <a href="https://x.com/NXL_Technology" target="_blank"
+                                        class="footer-social-icon-link-wrap w-inline-block">
                                         <img loading="lazy" src="../asset/image/twitter.png" alt="twitter"
                                             class="socile-icon" />
                                         <img loading="lazy" src="../asset/image/twitter.png" alt="twtiter-white"
                                             class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Aorganization%3A104868089&keywords=nxl%20technologies&origin=RICH_QUERY_TYPEAHEAD_HISTORY&position=0&searchId=6b38339e-f040-4cd3-8b0a-95daae8558b2&sid=KN5&spellCorrectionEnabled=true" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                    <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Aorganization%3A104868089&keywords=nxl%20technologies&origin=RICH_QUERY_TYPEAHEAD_HISTORY&position=0&searchId=6b38339e-f040-4cd3-8b0a-95daae8558b2&sid=KN5&spellCorrectionEnabled=true"
+                                        target="_blank" class="footer-social-icon-link-wrap w-inline-block">
                                         <img loading="lazy" src="../asset/image/linkedin.png" alt="linkedin"
                                             class="socile-icon" />
                                         <img loading="lazy" src="../asset/image/linkedin.png" alt="lindin-white"
@@ -250,7 +277,8 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6878854b4782d46450f79836"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
- <script src="../asset/js/custome.js"></script>   <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.36b8fb49256177c8.js"
+    <script src="../asset/js/custome.js"></script>
+    <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.36b8fb49256177c8.js"
         type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.ce27dc0b0564e9f1.js"
         type="text/javascript"></script>
