to aupdate the social link

--- a/index.html
+++ b/index.html
@@ -820,6 +820,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div data-w-id="96eefc29-21f3-4973-a3ae-631ace7fdf98" class="teaser-section">
                         <div class="teaser-container w-container">
                             <div class="teaser-grid">
@@ -827,10 +828,9 @@
                                     <div class="teaser-copy-wrap">
                                         <div class="teaser-img-tablet-down">
                                             <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
-                                                srcset="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dc7423f38b8e560c9d70a_2ab004c02f0639307dd87de160efa6ee_image-2-p-500.avif 500w, https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dc7423f38b8e560c9d70a_2ab004c02f0639307dd87de160efa6ee_image-2-p-800.avif 800w, https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dc7423f38b8e560c9d70a_2ab004c02f0639307dd87de160efa6ee_image-2.avif 2112w"
-                                                alt="image-2"
-                                                src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dc7423f38b8e560c9d70a_2ab004c02f0639307dd87de160efa6ee_image-2.avif"
-                                                loading="lazy" class="teaser-img" />
+                                                srcset="./asset/image/software.jpg 500w, ./asset/image/software.jpg 800w, ./asset/image/software.jpg 2112w"
+                                                alt="image-2" src="./asset/image/software.jpg" loading="lazy"
+                                                class="teaser-img" />
                                         </div>
                                         <div class="teaser-copy">
                                             <h2 class="number-text">01</h2>
@@ -873,51 +873,13 @@
                                         <img src="https://cdn.prod.website-fsssiles.com/6878854b4782d4645sd0f79836/68a2c3f5cb721ef5a91c9e17_portfolio-shap.avif"
                                             loading="lazy" alt="portfolio-shap" class="portfolio-shap _04" />
                                     </div>
-
-                                    <!--    
-                                        <div class="teaser-img-tablet-down">
-                                            <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
-                                                srcset="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dc7423f38b8e560c9d728_6dca888eacf982fa4d79fd76e2aa0a56_image-1-p-500.avif 500w, https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dc7423f38b8e560c9d728_6dca888eacf982fa4d79fd76e2aa0a56_image-1-p-800.avif 800w, https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dc7423f38b8e560c9d728_6dca888eacf982fa4d79fd76e2aa0a56_image-1.avif 2112w"
-                                                alt="image-1"
-                                                src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dc7423f38b8e560c9d728_6dca888eacf982fa4d79fd76e2aa0a56_image-1.avif"
-                                                loading="lazy" class="teaser-img _3" />
-                                        </div>
-                                        <div class="teaser-copy">
-                                            <h2 class="number-text">03</h2>
-                                            <div class="teaser-wrap">
-                                                <div class="hero-tag-btn-wrap _03">
-                                                    <div class="hero-tag-btn _03">
-                                                        <p class="hero-tag-btn-text _02">Crypto</p>
-                                                    </div>
-                                                    <div class="hero-tag-btn _03">
-                                                        <p class="hero-tag-btn-text _02">UI/UX Design</p>
-                                                    </div>
-                                                    <div class="hero-tag-btn _03">
-                                                        <p class="hero-tag-btn-text _02">Strategy</p>
-                                                    </div>
-                                                </div>
-                                                <div class="zenith-wrap">
-                                                    <h5 class="zenith">Crypto</h5>
-                                                    <h5 class="zenith _02">tranding app</h5>
-                                                </div>
-                                                <div class="portfolio-exar-wrap">
-                                                    <p class="portfolio-exar">A sleek and intuitive mobile app UI for
-                                                        cryptocurrency portfolio managemen and intuitive mobile app UI
-                                                        for cryptocurrency.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <img src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/68a2c3f5cb721ef5a91c9e17_portfolio-shap.avif"
-                                            loading="lazy" alt="portfolio-shap" class="portfolio-shap _05" />
-                                    </div> -->
-
                                 </div>
                                 <div class="teaser-column-02">
                                     <div class="p-teaser-img-wrap">
                                         <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
-                                            srcset="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dd79d8d551bd51e750fee_2ab004c02f0639307dd87de160efa6ee_Mask%20group-p-500.avif 500w, https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dd79d8d551bd51e750fee_2ab004c02f0639307dd87de160efa6ee_Mask%20group-p-800.avif 800w, https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dd79d8d551bd51e750fee_2ab004c02f0639307dd87de160efa6ee_Mask%20group.avif 2112w"
+                                            srcset="./asset/image/software.jpg 500w, ./asset/image/software.jpg 800w, ./asset/image/software.jpg 2112w"
                                             alt="Mask group"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dd79d8d551bd51e750fee_2ab004c02f0639307dd87de160efa6ee_Mask%20group.avif"
+                                            src="./asset/image/software.jpg"
                                             loading="lazy" class="teaser-img _1" />
                                         <!-- <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
                                             srcset="./asset/image/cloud_1.jpg 500w, ./asset/image/cloud_1.jpg 800w, ./asset/image/cloud_1.jpg 2112w"
@@ -939,6 +901,7 @@
                             </div>
                         </div>
                     </div>
+
                     <img src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/68a2c3f5cb721ef5a91c9e17_portfolio-shap.avif"
                         loading="lazy" alt="portfolio-shap" class="portfolio-shap _03" />
                 </div>
@@ -960,7 +923,8 @@
                             </div>
                             <div class="section-title-box">
                                 <h4 data-w-id="ef91e90a-637f-d2ad-d693-90f9e3b9b41f" style="opacity:0"
-                                    class="subtitle _04">Design with purpose, </h4>
+                                    class="subtitle _04">
+                                    Design with purpose, </h4>
                                 <h4 data-w-id="21b62674-2cbe-fbb8-0775-17f11ef722dc" style="opacity:0"
                                     class="subtitle _04">
                                     built with <span class="_02">results</span>
@@ -1741,7 +1705,7 @@
                                     938 key avenues, San Francisco, CA 94124,
                                 </p>
                                 <div data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc86" class="social-icon-wrap">
-                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87" href="#" target="_blank"
+                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87" href="https://www.facebook.com/NXLtechnologiespvtltd" target="_blank"
                                         class="footer-social-icon-link-wrap w-inline-block">
                                         <img loading="lazy" src="./asset/image/facebook.png" alt="facbook"
                                             class="socile-icon" />
@@ -1762,7 +1726,7 @@
                                         <img loading="lazy" src="./asset/image/linkedin.png" alt="lindin-white"
                                             class="socile-icon-facebook" />
                                     </a>
-                                    <a href="#" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                    <a href="https://www.instagram.com/nxl.technologies" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
                                         <img loading="lazy" src="./asset/image/instagram.png" alt="pinterest"
                                             class="socile-icon" />
                                         <img loading="lazy" src="./asset/image/instagram.png" alt="pinteres-white"
