--- a/service/ERP-solution.html
+++ b/service/ERP-solution.html
@@ -199,7 +199,7 @@
                                     938 key avenues, San Francisco, CA 94124,
                                 </p>
                                 <div data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc86" class="social-icon-wrap">
-                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87" href="#" target="_blank"
+                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87" href="https://www.facebook.com/NXLtechnologiespvtltd" target="_blank"
                                         class="footer-social-icon-link-wrap w-inline-block">
                                         <img loading="lazy" src="../asset/image/facebook.png" alt="facbook"
                                             class="socile-icon" />
@@ -218,7 +218,7 @@
                                         <img loading="lazy" src="../asset/image/linkedin.png" alt="lindin-white"
                                             class="socile-icon-facebook" />
                                     </a>
-                                    <a href="#" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                    <a href="https://www.instagram.com/nxl.technologies" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
                                         <img loading="lazy" src="../asset/image/instagram.png" alt="pinterest"
                                             class="socile-icon" />
                                         <img loading="lazy" src="../asset/image/instagram.png" alt="pinteres-white"
